--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <ul id="sidemenu">
                     
                     <li><a href="#header">Home</a></li>
+                    <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
